--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,12 +1,15 @@
 anyio==3.6.2 ; python_version >= "3.10" and python_version < "4.0"
 black==23.3.0 ; python_version >= "3.10" and python_version < "4.0"
+certifi==2022.12.7 ; python_version >= "3.10" and python_version < "4.0"
 click==8.1.3 ; python_version >= "3.10" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.10" and python_version < "4.0" and sys_platform == "win32" or python_version >= "3.10" and python_version < "4.0" and platform_system == "Windows"
 exceptiongroup==1.1.1 ; python_version >= "3.10" and python_version < "3.11"
 fastapi==0.95.1 ; python_version >= "3.10" and python_version < "4.0"
 greenlet==2.0.2 ; python_version >= "3.10" and python_version < "4.0" and platform_machine == "aarch64" or python_version >= "3.10" and python_version < "4.0" and platform_machine == "ppc64le" or python_version >= "3.10" and python_version < "4.0" and platform_machine == "x86_64" or python_version >= "3.10" and python_version < "4.0" and platform_machine == "amd64" or python_version >= "3.10" and python_version < "4.0" and platform_machine == "AMD64" or python_version >= "3.10" and python_version < "4.0" and platform_machine == "win32" or python_version >= "3.10" and python_version < "4.0" and platform_machine == "WIN32"
 h11==0.14.0 ; python_version >= "3.10" and python_version < "4.0"
+httpcore==0.17.0 ; python_version >= "3.10" and python_version < "4.0"
 httptools==0.5.0 ; python_version >= "3.10" and python_version < "4.0"
+httpx==0.24.0 ; python_version >= "3.10" and python_version < "4.0"
 idna==3.4 ; python_version >= "3.10" and python_version < "4.0"
 iniconfig==2.0.0 ; python_version >= "3.10" and python_version < "4.0"
 mypy-extensions==1.0.0 ; python_version >= "3.10" and python_version < "4.0"
