--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,9 +13,19 @@ uvicorn = { extras = ["standard"], version = "^0.21.1" }
 orjson = "^3.8.10"
 pyhumps = "^3.8.0"
 sqlalchemy = { extras = ["asyncio"], version = "^2.0.9" }
+python-jose = {extras = ["cryptography"], version = "^3.3.0"}
+passlib = {extras = ["argon2"], version = "^1.7.4"}
+pydantic = {extras = ["email"], version = "^1.10.7"}
+alembic = "^1.10.4"
+asyncpg = "^0.27.0"
 
 [tool.poetry.scripts]
 reshal-api = "reshal_api.main:run"
+
+[tool.ruff]
+exclude = ["venv", ".nox"]
+line-length = 120
+target-version = "py311"
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
