--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,36 @@
+alembic==1.10.4 ; python_version >= "3.10" and python_version < "4.0"
 anyio==3.6.2 ; python_version >= "3.10" and python_version < "4.0"
+argon2-cffi-bindings==21.2.0 ; python_version >= "3.10" and python_version < "4.0"
+argon2-cffi==21.3.0 ; python_version >= "3.10" and python_version < "4.0"
+asyncpg==0.27.0 ; python_version >= "3.10" and python_version < "4.0"
+cffi==1.15.1 ; python_version >= "3.10" and python_version < "4.0"
 click==8.1.3 ; python_version >= "3.10" and python_version < "4.0"
 colorama==0.4.6 ; sys_platform == "win32" and python_version >= "3.10" and python_version < "4.0" or python_version >= "3.10" and python_version < "4.0" and platform_system == "Windows"
+cryptography==40.0.2 ; python_version >= "3.10" and python_version < "4.0"
+dnspython==2.3.0 ; python_version >= "3.10" and python_version < "4.0"
+ecdsa==0.18.0 ; python_version >= "3.10" and python_version < "4.0"
+email-validator==2.0.0.post2 ; python_version >= "3.10" and python_version < "4.0"
 fastapi==0.95.1 ; python_version >= "3.10" and python_version < "4.0"
 greenlet==2.0.2 ; python_version >= "3.10" and python_version < "4.0" and platform_machine == "aarch64" or python_version >= "3.10" and python_version < "4.0" and platform_machine == "ppc64le" or python_version >= "3.10" and python_version < "4.0" and platform_machine == "x86_64" or python_version >= "3.10" and python_version < "4.0" and platform_machine == "amd64" or python_version >= "3.10" and python_version < "4.0" and platform_machine == "AMD64" or python_version >= "3.10" and python_version < "4.0" and platform_machine == "win32" or python_version >= "3.10" and python_version < "4.0" and platform_machine == "WIN32"
 h11==0.14.0 ; python_version >= "3.10" and python_version < "4.0"
 httptools==0.5.0 ; python_version >= "3.10" and python_version < "4.0"
 idna==3.4 ; python_version >= "3.10" and python_version < "4.0"
+mako==1.2.4 ; python_version >= "3.10" and python_version < "4.0"
+markupsafe==2.1.2 ; python_version >= "3.10" and python_version < "4.0"
 orjson==3.8.10 ; python_version >= "3.10" and python_version < "4.0"
+passlib[argon2]==1.7.4 ; python_version >= "3.10" and python_version < "4.0"
+pyasn1==0.5.0 ; python_version >= "3.10" and python_version < "4.0"
+pycparser==2.21 ; python_version >= "3.10" and python_version < "4.0"
 pydantic==1.10.7 ; python_version >= "3.10" and python_version < "4.0"
+pydantic[email]==1.10.7 ; python_version >= "3.10" and python_version < "4.0"
 pyhumps==3.8.0 ; python_version >= "3.10" and python_version < "4.0"
 python-dotenv==1.0.0 ; python_version >= "3.10" and python_version < "4.0"
+python-jose[cryptography]==3.3.0 ; python_version >= "3.10" and python_version < "4.0"
 pyyaml==6.0 ; python_version >= "3.10" and python_version < "4.0"
+rsa==4.9 ; python_version >= "3.10" and python_version < "4"
+six==1.16.0 ; python_version >= "3.10" and python_version < "4.0"
 sniffio==1.3.0 ; python_version >= "3.10" and python_version < "4.0"
+sqlalchemy==2.0.9 ; python_version >= "3.10" and python_version < "4.0"
 sqlalchemy[asyncio]==2.0.9 ; python_version >= "3.10" and python_version < "4.0"
 starlette==0.26.1 ; python_version >= "3.10" and python_version < "4.0"
 typing-extensions==4.5.0 ; python_version >= "3.10" and python_version < "4.0"
