--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,12 +12,15 @@ fastapi = "^0.95.1"
 uvicorn = { extras = ["standard"], version = "^0.21.1" }
 orjson = "^3.8.10"
 pyhumps = "^3.8.0"
-sqlalchemy = { extras = ["asyncio"], version = "^2.0.9" }
-python-jose = {extras = ["cryptography"], version = "^3.3.0"}
-passlib = {extras = ["argon2"], version = "^1.7.4"}
-pydantic = {extras = ["email"], version = "^1.10.7"}
+sqlalchemy = {extras = ["asyncio"], version = "^2.0.11"}
+python-jose = { extras = ["cryptography"], version = "^3.3.0" }
+passlib = { extras = ["argon2"], version = "^1.7.4" }
+pydantic = { extras = ["email"], version = "^1.10.7" }
 alembic = "^1.10.4"
 asyncpg = "^0.27.0"
+aiofiles = "^23.1.0"
+python-multipart = "^0.0.6"
+pillow = "^9.5.0"
 
 [tool.poetry.scripts]
 reshal-api = "reshal_api.main:run"
@@ -36,6 +39,8 @@ ruff = "^0.0.262"
 pytest = "^7.3.1"
 pytest-asyncio = "^0.21.0"
 httpx = "^0.24.0"
+typer = { extras = ["all"], version = "^0.7.0" }
+psycopg2 = "^2.9.6"
 
 [build-system]
 requires = ["poetry-core"]
