--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,3 +1,4 @@
+aiofiles==23.1.0 ; python_version >= "3.10" and python_version < "4.0"
 alembic==1.10.4 ; python_version >= "3.10" and python_version < "4.0"
 anyio==3.6.2 ; python_version >= "3.10" and python_version < "4.0"
 argon2-cffi-bindings==21.2.0 ; python_version >= "3.10" and python_version < "4.0"
@@ -7,7 +8,8 @@ black==23.3.0 ; python_version >= "3.10" and python_version < "4.0"
 certifi==2022.12.7 ; python_version >= "3.10" and python_version < "4.0"
 cffi==1.15.1 ; python_version >= "3.10" and python_version < "4.0"
 click==8.1.3 ; python_version >= "3.10" and python_version < "4.0"
-colorama==0.4.6 ; python_version >= "3.10" and python_version < "4.0" and sys_platform == "win32" or python_version >= "3.10" and python_version < "4.0" and platform_system == "Windows"
+colorama==0.4.6 ; python_version >= "3.10" and python_version < "4.0"
+commonmark==0.9.1 ; python_version >= "3.10" and python_version < "4.0"
 cryptography==40.0.2 ; python_version >= "3.10" and python_version < "4.0"
 dnspython==2.3.0 ; python_version >= "3.10" and python_version < "4.0"
 ecdsa==0.18.0 ; python_version >= "3.10" and python_version < "4.0"
@@ -28,26 +30,33 @@ orjson==3.8.10 ; python_version >= "3.10" and python_version < "4.0"
 packaging==23.1 ; python_version >= "3.10" and python_version < "4.0"
 passlib[argon2]==1.7.4 ; python_version >= "3.10" and python_version < "4.0"
 pathspec==0.11.1 ; python_version >= "3.10" and python_version < "4.0"
+pillow==9.5.0 ; python_version >= "3.10" and python_version < "4.0"
 platformdirs==3.2.0 ; python_version >= "3.10" and python_version < "4.0"
 pluggy==1.0.0 ; python_version >= "3.10" and python_version < "4.0"
+psycopg2==2.9.6 ; python_version >= "3.10" and python_version < "4.0"
 pyasn1==0.5.0 ; python_version >= "3.10" and python_version < "4.0"
 pycparser==2.21 ; python_version >= "3.10" and python_version < "4.0"
 pydantic==1.10.7 ; python_version >= "3.10" and python_version < "4.0"
 pydantic[email]==1.10.7 ; python_version >= "3.10" and python_version < "4.0"
+pygments==2.15.1 ; python_version >= "3.10" and python_version < "4.0"
 pyhumps==3.8.0 ; python_version >= "3.10" and python_version < "4.0"
 pytest-asyncio==0.21.0 ; python_version >= "3.10" and python_version < "4.0"
 pytest==7.3.1 ; python_version >= "3.10" and python_version < "4.0"
 python-dotenv==1.0.0 ; python_version >= "3.10" and python_version < "4.0"
 python-jose[cryptography]==3.3.0 ; python_version >= "3.10" and python_version < "4.0"
+python-multipart==0.0.6 ; python_version >= "3.10" and python_version < "4.0"
 pyyaml==6.0 ; python_version >= "3.10" and python_version < "4.0"
+rich==12.6.0 ; python_version >= "3.10" and python_version < "4.0"
 rsa==4.9 ; python_version >= "3.10" and python_version < "4"
 ruff==0.0.262 ; python_version >= "3.10" and python_version < "4.0"
+shellingham==1.5.0.post1 ; python_version >= "3.10" and python_version < "4.0"
 six==1.16.0 ; python_version >= "3.10" and python_version < "4.0"
 sniffio==1.3.0 ; python_version >= "3.10" and python_version < "4.0"
-sqlalchemy==2.0.9 ; python_version >= "3.10" and python_version < "4.0"
-sqlalchemy[asyncio]==2.0.9 ; python_version >= "3.10" and python_version < "4.0"
+sqlalchemy==2.0.11 ; python_version >= "3.10" and python_version < "4.0"
+sqlalchemy[asyncio]==2.0.11 ; python_version >= "3.10" and python_version < "4.0"
 starlette==0.26.1 ; python_version >= "3.10" and python_version < "4.0"
 tomli==2.0.1 ; python_version >= "3.10" and python_version < "3.11"
+typer[all]==0.7.0 ; python_version >= "3.10" and python_version < "4.0"
 typing-extensions==4.5.0 ; python_version >= "3.10" and python_version < "4.0"
 uvicorn[standard]==0.21.1 ; python_version >= "3.10" and python_version < "4.0"
 uvloop==0.17.0 ; sys_platform != "win32" and sys_platform != "cygwin" and platform_python_implementation != "PyPy" and python_version >= "3.10" and python_version < "4.0"
