--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aiofiles==23.1.0 ; python_version >= "3.10" and python_version < "4.0"
 alembic==1.10.4 ; python_version >= "3.10" and python_version < "4.0"
 anyio==3.6.2 ; python_version >= "3.10" and python_version < "4.0"
 argon2-cffi-bindings==21.2.0 ; python_version >= "3.10" and python_version < "4.0"
@@ -19,6 +20,7 @@ mako==1.2.4 ; python_version >= "3.10" and python_version < "4.0"
 markupsafe==2.1.2 ; python_version >= "3.10" and python_version < "4.0"
 orjson==3.8.10 ; python_version >= "3.10" and python_version < "4.0"
 passlib[argon2]==1.7.4 ; python_version >= "3.10" and python_version < "4.0"
+pillow==9.5.0 ; python_version >= "3.10" and python_version < "4.0"
 pyasn1==0.5.0 ; python_version >= "3.10" and python_version < "4.0"
 pycparser==2.21 ; python_version >= "3.10" and python_version < "4.0"
 pydantic==1.10.7 ; python_version >= "3.10" and python_version < "4.0"
@@ -26,12 +28,13 @@ pydantic[email]==1.10.7 ; python_version >= "3.10" and python_version < "4.0"
 pyhumps==3.8.0 ; python_version >= "3.10" and python_version < "4.0"
 python-dotenv==1.0.0 ; python_version >= "3.10" and python_version < "4.0"
 python-jose[cryptography]==3.3.0 ; python_version >= "3.10" and python_version < "4.0"
+python-multipart==0.0.6 ; python_version >= "3.10" and python_version < "4.0"
 pyyaml==6.0 ; python_version >= "3.10" and python_version < "4.0"
 rsa==4.9 ; python_version >= "3.10" and python_version < "4"
 six==1.16.0 ; python_version >= "3.10" and python_version < "4.0"
 sniffio==1.3.0 ; python_version >= "3.10" and python_version < "4.0"
-sqlalchemy==2.0.9 ; python_version >= "3.10" and python_version < "4.0"
-sqlalchemy[asyncio]==2.0.9 ; python_version >= "3.10" and python_version < "4.0"
+sqlalchemy==2.0.11 ; python_version >= "3.10" and python_version < "4.0"
+sqlalchemy[asyncio]==2.0.11 ; python_version >= "3.10" and python_version < "4.0"
 starlette==0.26.1 ; python_version >= "3.10" and python_version < "4.0"
 typing-extensions==4.5.0 ; python_version >= "3.10" and python_version < "4.0"
 uvicorn[standard]==0.21.1 ; python_version >= "3.10" and python_version < "4.0"
