--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -45,6 +45,7 @@ pytest==7.3.1 ; python_version >= "3.10" and python_version < "4.0"
 python-dotenv==1.0.0 ; python_version >= "3.10" and python_version < "4.0"
 python-jose[cryptography]==3.3.0 ; python_version >= "3.10" and python_version < "4.0"
 python-multipart==0.0.6 ; python_version >= "3.10" and python_version < "4.0"
+pytz==2023.3 ; python_version >= "3.10" and python_version < "4.0"
 pyyaml==6.0 ; python_version >= "3.10" and python_version < "4.0"
 rich==12.6.0 ; python_version >= "3.10" and python_version < "4.0"
 rsa==4.9 ; python_version >= "3.10" and python_version < "4"
