--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -3,29 +3,48 @@ alembic==1.10.4 ; python_version >= "3.10" and python_version < "4.0"
 anyio==3.6.2 ; python_version >= "3.10" and python_version < "4.0"
 argon2-cffi-bindings==21.2.0 ; python_version >= "3.10" and python_version < "4.0"
 argon2-cffi==21.3.0 ; python_version >= "3.10" and python_version < "4.0"
+asgiref==3.6.0 ; python_version >= "3.10" and python_version < "4.0"
 asyncpg==0.27.0 ; python_version >= "3.10" and python_version < "4.0"
+backoff==2.2.1 ; python_version >= "3.10" and python_version < "4.0"
 black==23.3.0 ; python_version >= "3.10" and python_version < "4.0"
 certifi==2022.12.7 ; python_version >= "3.10" and python_version < "4.0"
 cffi==1.15.1 ; python_version >= "3.10" and python_version < "4.0"
+charset-normalizer==3.1.0 ; python_version >= "3.10" and python_version < "4.0"
 click==8.1.3 ; python_version >= "3.10" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.10" and python_version < "4.0"
 commonmark==0.9.1 ; python_version >= "3.10" and python_version < "4.0"
 cryptography==40.0.2 ; python_version >= "3.10" and python_version < "4.0"
+deprecated==1.2.13 ; python_version >= "3.10" and python_version < "4.0"
 dnspython==2.3.0 ; python_version >= "3.10" and python_version < "4.0"
 ecdsa==0.18.0 ; python_version >= "3.10" and python_version < "4.0"
 email-validator==2.0.0.post2 ; python_version >= "3.10" and python_version < "4.0"
 exceptiongroup==1.1.1 ; python_version >= "3.10" and python_version < "3.11"
 fastapi==0.95.1 ; python_version >= "3.10" and python_version < "4.0"
+googleapis-common-protos==1.59.0 ; python_version >= "3.10" and python_version < "4.0"
 greenlet==2.0.2 ; python_version >= "3.10" and python_version < "4.0" and platform_machine == "aarch64" or python_version >= "3.10" and python_version < "4.0" and platform_machine == "ppc64le" or python_version >= "3.10" and python_version < "4.0" and platform_machine == "x86_64" or python_version >= "3.10" and python_version < "4.0" and platform_machine == "amd64" or python_version >= "3.10" and python_version < "4.0" and platform_machine == "AMD64" or python_version >= "3.10" and python_version < "4.0" and platform_machine == "win32" or python_version >= "3.10" and python_version < "4.0" and platform_machine == "WIN32"
+grpcio==1.54.2 ; python_version >= "3.10" and python_version < "4.0"
 h11==0.14.0 ; python_version >= "3.10" and python_version < "4.0"
 httpcore==0.17.0 ; python_version >= "3.10" and python_version < "4.0"
 httptools==0.5.0 ; python_version >= "3.10" and python_version < "4.0"
 httpx==0.24.0 ; python_version >= "3.10" and python_version < "4.0"
 idna==3.4 ; python_version >= "3.10" and python_version < "4.0"
+importlib-metadata==6.0.1 ; python_version >= "3.10" and python_version < "4.0"
 iniconfig==2.0.0 ; python_version >= "3.10" and python_version < "4.0"
 mako==1.2.4 ; python_version >= "3.10" and python_version < "4.0"
 markupsafe==2.1.2 ; python_version >= "3.10" and python_version < "4.0"
 mypy-extensions==1.0.0 ; python_version >= "3.10" and python_version < "4.0"
+opentelemetry-api==1.17.0 ; python_version >= "3.10" and python_version < "4.0"
+opentelemetry-exporter-otlp-proto-grpc==1.17.0 ; python_version >= "3.10" and python_version < "4.0"
+opentelemetry-exporter-otlp-proto-http==1.17.0 ; python_version >= "3.10" and python_version < "4.0"
+opentelemetry-exporter-otlp==1.17.0 ; python_version >= "3.10" and python_version < "4.0"
+opentelemetry-instrumentation-asgi==0.38b0 ; python_version >= "3.10" and python_version < "4.0"
+opentelemetry-instrumentation-fastapi==0.38b0 ; python_version >= "3.10" and python_version < "4.0"
+opentelemetry-instrumentation-logging==0.38b0 ; python_version >= "3.10" and python_version < "4.0"
+opentelemetry-instrumentation==0.38b0 ; python_version >= "3.10" and python_version < "4.0"
+opentelemetry-proto==1.17.0 ; python_version >= "3.10" and python_version < "4.0"
+opentelemetry-sdk==1.17.0 ; python_version >= "3.10" and python_version < "4.0"
+opentelemetry-semantic-conventions==0.38b0 ; python_version >= "3.10" and python_version < "4.0"
+opentelemetry-util-http==0.38b0 ; python_version >= "3.10" and python_version < "4.0"
 orjson==3.8.10 ; python_version >= "3.10" and python_version < "4.0"
 packaging==23.1 ; python_version >= "3.10" and python_version < "4.0"
 passlib[argon2]==1.7.4 ; python_version >= "3.10" and python_version < "4.0"
@@ -33,6 +52,8 @@ pathspec==0.11.1 ; python_version >= "3.10" and python_version < "4.0"
 pillow==9.5.0 ; python_version >= "3.10" and python_version < "4.0"
 platformdirs==3.2.0 ; python_version >= "3.10" and python_version < "4.0"
 pluggy==1.0.0 ; python_version >= "3.10" and python_version < "4.0"
+prometheus-client==0.16.0 ; python_version >= "3.10" and python_version < "4.0"
+protobuf==4.23.0 ; python_version >= "3.10" and python_version < "4.0"
 psycopg2==2.9.6 ; python_version >= "3.10" and python_version < "4.0"
 pyasn1==0.5.0 ; python_version >= "3.10" and python_version < "4.0"
 pycparser==2.21 ; python_version >= "3.10" and python_version < "4.0"
@@ -47,9 +68,11 @@ python-jose[cryptography]==3.3.0 ; python_version >= "3.10" and python_version <
 python-multipart==0.0.6 ; python_version >= "3.10" and python_version < "4.0"
 pytz==2023.3 ; python_version >= "3.10" and python_version < "4.0"
 pyyaml==6.0 ; python_version >= "3.10" and python_version < "4.0"
+requests==2.30.0 ; python_version >= "3.10" and python_version < "4.0"
 rich==12.6.0 ; python_version >= "3.10" and python_version < "4.0"
 rsa==4.9 ; python_version >= "3.10" and python_version < "4"
 ruff==0.0.262 ; python_version >= "3.10" and python_version < "4.0"
+setuptools==67.7.2 ; python_version >= "3.10" and python_version < "4.0"
 shellingham==1.5.0.post1 ; python_version >= "3.10" and python_version < "4.0"
 six==1.16.0 ; python_version >= "3.10" and python_version < "4.0"
 sniffio==1.3.0 ; python_version >= "3.10" and python_version < "4.0"
@@ -59,7 +82,10 @@ starlette==0.26.1 ; python_version >= "3.10" and python_version < "4.0"
 tomli==2.0.1 ; python_version >= "3.10" and python_version < "3.11"
 typer[all]==0.7.0 ; python_version >= "3.10" and python_version < "4.0"
 typing-extensions==4.5.0 ; python_version >= "3.10" and python_version < "4.0"
+urllib3==2.0.2 ; python_version >= "3.10" and python_version < "4.0"
 uvicorn[standard]==0.21.1 ; python_version >= "3.10" and python_version < "4.0"
 uvloop==0.17.0 ; sys_platform != "win32" and sys_platform != "cygwin" and platform_python_implementation != "PyPy" and python_version >= "3.10" and python_version < "4.0"
 watchfiles==0.19.0 ; python_version >= "3.10" and python_version < "4.0"
 websockets==11.0.2 ; python_version >= "3.10" and python_version < "4.0"
+wrapt==1.15.0 ; python_version >= "3.10" and python_version < "4.0"
+zipp==3.15.0 ; python_version >= "3.10" and python_version < "4.0"
