--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -19,6 +19,8 @@ dnspython==2.3.0 ; python_version >= "3.10" and python_version < "4.0"
 ecdsa==0.18.0 ; python_version >= "3.10" and python_version < "4.0"
 email-validator==2.0.0.post2 ; python_version >= "3.10" and python_version < "4.0"
 exceptiongroup==1.1.1 ; python_version >= "3.10" and python_version < "3.11"
+factory-boy==3.2.1 ; python_version >= "3.10" and python_version < "4.0"
+faker==18.11.1 ; python_version >= "3.10" and python_version < "4.0"
 fastapi==0.95.1 ; python_version >= "3.10" and python_version < "4.0"
 googleapis-common-protos==1.59.0 ; python_version >= "3.10" and python_version < "4.0"
 greenlet==2.0.2 ; python_version >= "3.10" and python_version < "4.0" and platform_machine == "aarch64" or python_version >= "3.10" and python_version < "4.0" and platform_machine == "ppc64le" or python_version >= "3.10" and python_version < "4.0" and platform_machine == "x86_64" or python_version >= "3.10" and python_version < "4.0" and platform_machine == "amd64" or python_version >= "3.10" and python_version < "4.0" and platform_machine == "AMD64" or python_version >= "3.10" and python_version < "4.0" and platform_machine == "win32" or python_version >= "3.10" and python_version < "4.0" and platform_machine == "WIN32"
@@ -62,7 +64,9 @@ pydantic[email]==1.10.7 ; python_version >= "3.10" and python_version < "4.0"
 pygments==2.15.1 ; python_version >= "3.10" and python_version < "4.0"
 pyhumps==3.8.0 ; python_version >= "3.10" and python_version < "4.0"
 pytest-asyncio==0.21.0 ; python_version >= "3.10" and python_version < "4.0"
+pytest-env==0.8.2 ; python_version >= "3.10" and python_version < "4.0"
 pytest==7.3.1 ; python_version >= "3.10" and python_version < "4.0"
+python-dateutil==2.8.2 ; python_version >= "3.10" and python_version < "4.0"
 python-dotenv==1.0.0 ; python_version >= "3.10" and python_version < "4.0"
 python-jose[cryptography]==3.3.0 ; python_version >= "3.10" and python_version < "4.0"
 python-multipart==0.0.6 ; python_version >= "3.10" and python_version < "4.0"
@@ -76,6 +80,7 @@ setuptools==67.7.2 ; python_version >= "3.10" and python_version < "4.0"
 shellingham==1.5.0.post1 ; python_version >= "3.10" and python_version < "4.0"
 six==1.16.0 ; python_version >= "3.10" and python_version < "4.0"
 sniffio==1.3.0 ; python_version >= "3.10" and python_version < "4.0"
+sqlalchemy-utils==0.41.1 ; python_version >= "3.10" and python_version < "4.0"
 sqlalchemy==2.0.11 ; python_version >= "3.10" and python_version < "4.0"
 sqlalchemy[asyncio]==2.0.11 ; python_version >= "3.10" and python_version < "4.0"
 starlette==0.26.1 ; python_version >= "3.10" and python_version < "4.0"
