Update compose files

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -12,6 +12,10 @@ services:
       - APP_SECRET_KEY=
       - APP_ACCESS_TOKEN_COOKIE_NAME=
       - APP_ACCESS_TOKEN_EXPIRE=
+      - AWS_ACCESS_KEY=
+      - AWS_SECRET_KEY=
+      - AWS_REGION=
+      - OTLP_GRPC_ENDPOINT=
       - CORS_ALLOWED_ORIGINS=
       - CORS_ALLOW_METHODS=
       - CORS_ALLOW_HEADERS=
